{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 403,
  "lineage": "d21118cb-33a5-fdd8-1256-989536438f79",
  "resources": [
    {
      "module": "module.alb_braves",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_braves",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:447616635134:loadbalancer/app/balanceador-final-project/4422b67e69d7ba3f",
            "arn_suffix": "app/balanceador-final-project/4422b67e69d7ba3f",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "balanceador-final-project-690623124.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:447616635134:loadbalancer/app/balanceador-final-project/4422b67e69d7ba3f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "balanceador-final-project",
            "preserve_host_header": false,
            "security_groups": [
              "sg-057c4f26abfc0cb75"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b6c709699d9e07e"
              },
              {
                "subnet_id": "subnet-0e35c91f4e30a61b6"
              }
            ],
            "subnets": [
              "subnet-04b6c709699d9e07e",
              "subnet-0e35c91f4e30a61b6"
            ],
            "vpc_id": "vpc-0a21aa3ce4e3cc2d4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc_braves.aws_security_group.sg_final_project",
            "module.vpc_braves.aws_subnet.public_subnet_one",
            "module.vpc_braves.aws_subnet.public_subnet_two",
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.alb_braves",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_braves",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:447616635134:listener/app/balanceador-final-project/4422b67e69d7ba3f/9e2586104fa6c158",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:447616635134:targetgroup/target-group-final-project/bdf2194ede05fc39",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:447616635134:listener/app/balanceador-final-project/4422b67e69d7ba3f/9e2586104fa6c158",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:447616635134:loadbalancer/app/balanceador-final-project/4422b67e69d7ba3f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_braves.aws_lb.lb_braves",
            "module.alb_braves.aws_lb_target_group.lb_target_group_braves",
            "module.vpc_braves.aws_security_group.sg_final_project",
            "module.vpc_braves.aws_subnet.public_subnet_one",
            "module.vpc_braves.aws_subnet.public_subnet_two",
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.alb_braves",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group_braves",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:447616635134:targetgroup/target-group-final-project/bdf2194ede05fc39",
            "arn_suffix": "targetgroup/target-group-final-project/bdf2194ede05fc39",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:447616635134:targetgroup/target-group-final-project/bdf2194ede05fc39",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-final-project",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a21aa3ce4e3cc2d4"
          },
          "dependencies": [
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_braves",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_final_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:447616635134:internet-gateway/igw-0dcbd0f0b9945bd3b",
            "id": "igw-0dcbd0f0b9945bd3b",
            "owner_id": "447616635134",
            "tags": {
              "Name": "igw_braves"
            },
            "tags_all": {
              "Name": "igw_braves"
            },
            "vpc_id": "vpc-0a21aa3ce4e3cc2d4"
          },
          "dependencies": [
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_braves",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_final_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:447616635134:route-table/rtb-01f0cc9aa1e2e1e12",
            "id": "rtb-01f0cc9aa1e2e1e12",
            "owner_id": "447616635134",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dcbd0f0b9945bd3b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routeTable_braves"
            },
            "tags_all": {
              "Name": "routeTable_braves"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a21aa3ce4e3cc2d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_braves.aws_internet_gateway.igw_final_project",
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_braves",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_subnet_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb87c64407a2f00d",
            "route_table_id": "rtb-01f0cc9aa1e2e1e12",
            "subnet_id": "subnet-0e35c91f4e30a61b6"
          },
          "dependencies": [
            "module.vpc_braves.aws_internet_gateway.igw_final_project",
            "module.vpc_braves.aws_route_table.rt_final_project",
            "module.vpc_braves.aws_subnet.public_subnet_one",
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_braves",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_subnet_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cddd7f3eb6639f4",
            "route_table_id": "rtb-01f0cc9aa1e2e1e12",
            "subnet_id": "subnet-04b6c709699d9e07e"
          },
          "dependencies": [
            "module.vpc_braves.aws_internet_gateway.igw_final_project",
            "module.vpc_braves.aws_route_table.rt_final_project",
            "module.vpc_braves.aws_subnet.public_subnet_two",
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_braves",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_final_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:447616635134:security-group/sg-057c4f26abfc0cb75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057c4f26abfc0cb75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231218151702863300000005",
            "name_prefix": "terraform-",
            "owner_id": "447616635134",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a21aa3ce4e3cc2d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_braves",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:447616635134:subnet/subnet-0e35c91f4e30a61b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e35c91f4e30a61b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447616635134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetOne_braves"
            },
            "tags_all": {
              "Name": "subnetOne_braves"
            },
            "vpc_id": "vpc-0a21aa3ce4e3cc2d4"
          },
          "dependencies": [
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_braves",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:447616635134:subnet/subnet-04b6c709699d9e07e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b6c709699d9e07e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447616635134",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetTwo_braves"
            },
            "tags_all": {
              "Name": "subnetTwo_braves"
            },
            "vpc_id": "vpc-0a21aa3ce4e3cc2d4"
          },
          "dependencies": [
            "module.vpc_braves.aws_vpc.vpc_final_project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_braves",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_final_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:447616635134:vpc/vpc-0a21aa3ce4e3cc2d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-0fc4b67fc87023b39",
            "default_route_table_id": "rtb-0e0bc81bc9f6e9999",
            "default_security_group_id": "sg-03dd93e1762e1b041",
            "dhcp_options_id": "dopt-0db3393142178373a",
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a21aa3ce4e3cc2d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e0bc81bc9f6e9999",
            "owner_id": "447616635134",
            "tags": {
              "Name": "vpc_braves"
            },
            "tags_all": {
              "Name": "vpc_braves"
            }
          }
        }
      ]
    }
  ]
}